Update Content in Index and About Pages

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7  bannertext">
-                    <h6>BEST PLATFORM</h6>
-                    <h1>GO HACKATHON</h1>
-                    <p>
-                        Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                        nurture talent among budding tech professional.<br>
-                        We create an eco-system of industry academia partnership and help in continuous and
+                    <h1>GOHACKATHON</h1>
+                    <h6>Presents</h6>
+                    <h2><strong>INNOVATION INVASION</strong></h2>
+                    <p><strong>A hackathon where crazy ideas become reality</strong><br>
+                        <!-- We create an eco-system of industry academia partnership and help in continuous and
                         sustainable development of innovative ideas, which are impactful for the growing economy and
-                        society.
-                    </p>
-                    <a href="upcoming_events.html">
+                        society. -->
+                        We are trying to build a community where everyone can connect, learn, and grow together.
+                    </p> <br>
+                    <a href="registeration/registration.php">
                         <button class="btn btn-primary px-5 py-2 primary-btn">
                             REGISTER NOW
                         </button>
@@ -108,7 +108,8 @@
                     development of innovative ideas, which are impactful for the growing economy and society. 
                     Go hackathon thrives to provide best nurturing, mentorship, skills and professional 
                     opportunities to its members and participants.We conduct series of events, seminars, 
-                    hackathons, internships and Projects.
+                    hackathons, internships and Projects. <br>
+                <a href="about.html"><strong>Know More</strong></a>
                 </p>  
             </div>
             <div class="imgofabout col-lg-5">
@@ -141,9 +142,9 @@
     <section class="section-2  p-0">
         <div class="cover">
             <div class="content text-center">
-                <h1>Some Features That Made Us Unique</h1>
+                <h2>Join Our Hackathon and Change the World</h2>
                 <p class="text-secondary">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
+                    Think outside the box: Collaborate, Innovate, and Create
                 </p>
             </div>
         </div>
@@ -151,158 +152,112 @@
             <article>
                 <div class="article-wrapper">
                     <figure>
-                        <img src="img\feature\3.jpg" alt="" />
+                        <img src="img/event/live-event.jpg" alt="" />
                     </figure>
                     <div class="article-body">
-                        <h2>Events</h2>
+                        <h2>Live Event</h2>
                         <p>
                             Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
                             congue
                             bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
                             egestas.
                         </p>
-                        <a href="#" class="read-more">
-                            Read more <span class="sr-only">about this is some title</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                        <a class="btn btn-primary" href="live_event.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
             <article>
                 <div class="article-wrapper">
                     <figure>
-                        <img width="368" height="207" src="img\feature\download.jpg" alt="" />
+                        <img width="368" height="207" src="img/event/upcoming-event.avif" alt="" />
                     </figure>
                     <div class="article-body">
-                        <h2>Hackathon</h2>
+                        <h2>Upcoming Events</h2>
                         <p>
                             Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
                             congue
                             bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
                             egestas.
                         </p>
-                        <a href="#" class="read-more">
-                            Read more <span class="sr-only">about this is some title</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                        <a class="btn btn-primary" href="upcoming_events.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
             <article>
                 <div class="article-wrapper">
                     <figure>
-                        <img width="368" height="207" src="img\feature\avg.jpg" alt="" />
+                        <img width="368" height="207" src="img/event/past-event.jpg" alt="" />
                     </figure>
                     <div class="article-body">
-                        <h2>Competitive coding</h2>
+                        <h2>Past Events</h2>
                         <p>
                             Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
                             congue
                             bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
                             egestas.
                         </p>
-                        <a href="#" class="read-more">
-                            Read more <span class="sr-only">about this is some title</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                        <a class="btn btn-primary" href="past_events.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
         </section>
+       
         <div class="purchase text-center">
-            <h1>Courses, Practice Sets, Quizzes</h1>
+            <h1>Sharpen Your Skills</h1>
             <p class="text-secondary">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Learn, Practice, and Test Your Skills with Our Courses.
             </p>
         </div>
         <section class="articles">
             <article>
                 <div class="article-wrapper">
                     <figure>
-                        <img width="368" height="207" src="img\feature\datastructure.jpg" alt="" />
+                        <img width="368" height="207" src="img/courses/AI&ML.jpg" alt="" />
                     </figure>
                     <div class="article-body">
-                        <h2>Data structure and algorithm</h2>
+                        <h2>AI and Machine Learning</h2>
                         <p>
-                            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                            congue
-                            bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                            egestas.
+                            AI and machine learning are rapidly developing fields that have the potential to 
+                            revolutionize many industries and change the way we live and work. It involves the 
+                            development of computer systems that can perform tasks that would normally require 
+                            human intelligence. 
                         </p>
-                        <a href="#" class="read-more">
-                            Know more <span class="sr-only">about this is some title</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                        <a class="btn btn-primary" href="training.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
             <article>
                 <div class="article-wrapper">
                     <figure>
-                        <img width="368" height="207" src="img\feature\webprogramming.jpg" alt="" />
+                        <img width="368" height="207" src="img/courses/FullStack.jpg" alt="" />
                     </figure>
                     <div class="article-body">
-                        <h2>web programming</h2>
+                        <h2>Full Stack Development</h2>
                         <p>
-                            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                            congue
-                            bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                            egestas.
+                            Full stack development is a complex and rapidly evolving field that requires a 
+                            broad range of skills and knowledge. However, it can also be a rewarding and 
+                            lucrative career path for those who are passionate about web development and enjoy 
+                            working on both the front-end and back-end of applications.
                         </p>
-                        <a href="#" class="read-more">
-                            Know more <span class="sr-only">about this is some title</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                        <a class="btn btn-primary" href="training.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
             <article>
                 <div class="article-wrapper">
                     <figure>
-                        <img width="368" height="207" src="img\feature\datascience.jpg" alt="" />
+                        <img width="368" height="207" src="img/courses/Aws_Devops.png" alt="" />
                     </figure>
                     <div class="article-body">
-                        <h2>data science</h2>
+                        <h2>AWS and Devops</h2>
                         <p>
-                            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                            congue
-                            bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                            egestas.
+                            AWS and DevOps are closely related, as many DevOps practices rely on cloud 
+                            infrastructure and services like those provided by AWS. By leveraging AWS, 
+                            DevOps teams can quickly and easily provision and configure infrastructure, 
+                            deploy applications, and automate testing and deployment processes and 
+                            deliver applications and services faster and more reliably.
                         </p>
-                        <a href="#" class="read-more">
-                            know more <span class="sr-only">about this is some title</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                        <a class="btn btn-primary" href="training.html" role="button">Know More</a>
                     </div>
                 </div>
             </article>
@@ -310,7 +265,7 @@
     </section>
     <section class="section-4">
         <div class="container text-center">
-            <h1 class="text-dark">Collaborate With Go Hackathon</h1>
+            <h1 class="text-dark">Collaborate With GoHackathon</h1>
             <p class="text-secondary">Some of our collaborations with top colleges</p>
         </div>
         <div class="row team">
@@ -320,17 +275,35 @@
                         <img src="img/collaborator1.png" class="img-fluid border-radius p-4" alt="">
                     </div>
                     <div   class="card-body">
-                        <h3 class="card-title">BTKU Dwarahat</h3>
+                        <h3 class="card-title">BTKIT DWARAHAT</h3>
                         <p class="card-text-index">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
-                            veniam, illo dolor soluta assumenda
+                            To promote and enhance skill development and employment generation activities for 
+                            youth, MSPL is working under various schemes to impart skills in various trades & 
+                            locations
                         </p>
-                        <a href="#" class="text-secondary text-decoration-none">Go Hackaersum</a>
-                        <p class="text-black-50">19/01/2023</p>
+                        <!-- <p class="text-black-50">19/01/2023</p> -->
+                        <p><a class="btn btn-primary" href="#" role="button">Know More</a></p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 text-center">
+                <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                        <img src="img/resources/ssim-logo.png" class="img-fluid border-radius p-4" alt="">
+                    </div>
+                    <div   class="card-body">
+                        <h3 class="card-title">SSIM DELHI</h3>
+                        <p class="card-text-index">
+                            The incubation Center will be a research platform for students, industry, alumni, 
+                            start-ups, small and medium enterprises, faculty and researchers by helping them 
+                            technology innovations.
+                        </p>
+                        <p><a class="btn btn-primary" href="#" role="button">Know More</a></p>
+                        <!-- <p class="text-black-50">19/01/2023</p> -->
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-md-4 col-12">
                 <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
                     <div class="carousel-inner text-center">
                         <div class="carousel-item active">
@@ -339,7 +312,7 @@
                                     <img src="" class="img-fluid rounded-circle w-50 p-4" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <h3 class="card-title">ABC College</h3>
+                                    <h3 class="card-title">Graphic Era</h3>
                                     <p class="card-text-index">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
                                         recusandae, veniam, illo dolor soluta assumenda
@@ -367,20 +340,21 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="col-md-4 col-12 text-center">
                 <div class="card mr-2 d-inline-block shadow-lg">
                     <div class="card-img-top">
                         <img src="img/WIT-LOGO-1-1.png" class="img-fluid border-radius p-4" alt="">
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">WIT Dehradun</h3>
+                        <h3 class="card-title">WIT DEHRADUN</h3>
                         <p class="card-text-index">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
-                            veniam, illo dolor soluta assumenda
+                            Skill Development is a powerful tool to empower the people and improves their 
+                            social acceptance. It is complemented by a good economic growth and enhances 
+                            employability.
                         </p>
-                        <a href="#" class="text-secondary text-decoration-none">Coding Competition</a>
-                        <p class="text-black-50">11/10/2022</p>
+                        <p><a class="btn btn-primary" href="#" role="button">Know More</a></p>
+                        <!-- <p class="text-black-50">11/10/2022</p> -->
                     </div>
                 </div>
             </div>
