--- a/about.html
+++ b/about.html
@@ -78,12 +78,15 @@
                     <div class="aboutsection col-lg-7">
                         <h1>About GoHackathon</h1>
                         <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                            nurture talent among budding tech professional.
-                            Industry today is looking for talented students who are equipped and experience with
-                            advanced skills, software, attitude and updated industry best practices.We create an eco-system of industry academia partnership and help in continuous and
+                            nurture talent among budding tech professional. Industry today is looking for talented 
+                            students who are equipped and experience with advanced skills, software, attitude and 
+                            updated industry best practices. <br>
+                        </p>
+                        <p>We create an eco-system of industry academia partnership and help in continuous and
                             sustainable development of innovative ideas, which are impactful for the growing economy and
                             society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional opportunities to its members and participants.
-                            We conduct series of events, seminars, hackathons, internships and Projects.</p>  
+                            We conduct series of events, seminars, hackathons, internships and Projects.
+                        </p> 
                     </div>
                     <div class="imgofabout col-lg-5">
                         <img class="imgofabout" src="img/development2" alt="Dev">
@@ -94,16 +97,48 @@
     <div class="container">
         <div class="row">
             <div class="aboutsection-bottom col-lg-12">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cum nisi ipsam eius similique ut eaque sit nam impedit quos deleniti praesentium voluptates maxime. Harum pariatur ullam eveniet nam maxime.
-                    Illum architecto exercitationem, reprehenderit velit dolores eos quos ullam ut tempore nisi, voluptas quia iure necessitatibus eaque! Id similique aut excepturi eveniet numquam facilis ab temporibus sit deleniti, porro fugiat.
-                    Labore necessitatibus possimus eligendi tenetur accusamus omnis ad repellat magni perspiciatis maiores! Ullam, vel omnis modi doloribus sunt fugiat provident pariatur quaerat quam eaque eos temporibus veritatis cumque velit architecto!
-                    Ab eveniet iure aperiam iusto possimus nobis debitis quam earum veniam sapiente voluptatum perferendis labore, porro beatae, laboriosam autem assumenda minima recusandae magnam! Consequuntur unde quidem facere? Alias, sit labore.
-                    Atque non, ipsam explicabo impedit bis sapiente ipsum deserunt earum itaque inventore officiis consequatur facere quibusdam vero ex tempora, optio praesentium sequi, quia rerum illum deleniti. Facilis, modi.
-                    Aperiam voluptates eum expedita doloribus sapiente fuga ratione quibusdam magni aliquid necessitatibus incidunt vel delectus natus odio nulla ut, iusto hic vero aspernatur. Nobis dignissimos molestias deserunt, nulla provident soluta.
-                    Animi temporibus error, molestias esse itaque fuga sunt nostrum, autem facere dolorem delectus minus repellendus nam reprehenderit non, quisquam ducimus labore! Iste maiores ex neque nemo! Facere voluptate asperiores enim?
-                    Eveniet explicabo repellat et. Magnam, aliquam. Ducimus, ab aut repellat voluptate aliquam, animi placeat ipsa exercitationem, magnam voluptas nostrum ea. Nemo voluptate, culpa eum facilis dolorem delectus perferendis corrupti odit?
-                    Alias neque unde temporibus quo quasi sequi cumque at voluptates iste aspernatur ad cupiditate, perspiciatis consequuntur optio qui deserunt sunt eos possimus, similique ea accusamus nulla velit. Numquam, porro voluptatum!
-                    Deserunt magn.</p>
+                <h2>About Mangosorange Group</h2>
+                <p>MangosOrange Group aspires to be a fortune 500 company in the coming years. We are an 
+                    integrated service provider company with a knack of customized solutions for our esteemed 
+                    national & multinational brands. With a cumulative team experience of more than 100 years 
+                    we have delivered quality staffing solutions, skill development projects, Integrated 
+                    Facility Management Services. <br>
+                </p>
+                <p>
+                    Work Integrated Skill Training & Apprenticeship (WISTA) <br>
+                    Staffing Solutions including Contract Labour & Payroll Services. <br>
+                    Integrated Facility Management Services. <br>
+                    Vocational & Skill Development Projects (NAPS, Flexi-MoU, B. Voc., DDU-GKY & PMKVY) <br>
+                    Design and Deliver impactful CSR initiatives. <br>
+                    Catering Services in Industries, Hospitals, Skill Development Centers, Hostels & other Establishments. <br>
+                    Research & Development in Agritech & Allied Program. <br>
+                </p>
+                <a href="https://mangosorange.co.in/">
+                    <button class="btn btn-primary">Know More</button>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="aboutsection-agritech col-lg-12">
+                <h2>MangosOrange Agritech India Pvt. Ltd.</h2>
+                <p>MangosOrange Agritech India Private Limited is an Agritech startup envisaging the vision of 
+                    creating startup culture in Agriculture using technology and innovation. Help develop 
+                    entrepreneurship through creating centre of excellence, innovation labs, training labs, 
+                    high-tech farms. Seek funding from investors and provide implementation of high-tech farms 
+                    and build commercial farming setup for interested educational institutions, private bodies 
+                    and individuals, farmers and investors.<br>
+                </p>
+                <p>
+                    <strong>Research and Development</strong> <br>
+                    <strong>Modern Innovative Farming</strong> <br>
+                    <strong>Educating and Consulting</strong>
+                </p>
+                <a href="https://mangosorangeagritech.in/">
+                    <button class="btn btn-primary">Know More</button>
+                </a>
             </div>
         </div>
     </div>
