--- a/event.html
+++ b/event.html
@@ -20,19 +20,15 @@
 
 <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="index.html">
-      <img class="logoimg" src="img/main_logo.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      <img class="logoimg" src="img/main_logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-align-right text-dark"></i>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
       <div class="mr-auto"></div>
       <ul class="navbar-nav">
-          <li class="nav-item active">
-              <!-- <a class="nav-link" href="#">HOME
-                  <span class="sr-only">(current)</span>
-              </a> -->
-          </li>
           <li class="nav-item">
               <a class="nav-link active" href="about.html">ABOUT US</a>
           </li>
@@ -40,9 +36,9 @@
               <div class="dropdown">
                   <a href="event.html" class="nav-link">EVENTS</a>
                   <div class="dropdown-content">
-                      <a href="#">LIVE EVENTS</a>
-                      <a href="#">UPCOMMING EVENTS</a>
-                      <a href="#">PAST EVENTS</a>
+                      <a href="live_event.html">LIVE EVENTS</a>
+                      <a href="upcoming_events.html">UPCOMMING EVENTS</a>
+                      <a href="past_events.html">PAST EVENTS</a>
                   </div>
               </div>
           </li>
@@ -53,7 +49,7 @@
                       <a href="leaderboard.html">LEADERBOARD</a>
                       <a href="practiceset.html">PRACTICE SET</a>
                       <a href="participants.html">PARTICIPANTS</a>
-                      <a href="#">WINNERS</a>
+                      <a href="winners.html">WINNERS</a>
                   </div>
               </div>
           </li>
@@ -64,8 +60,8 @@
               <a class="nav-link" href="contact.html">CONTACT US</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="training.html">TRAINING</a>
-        </li>
+              <a class="nav-link" href="training.html">TRAINING</a>
+          </li>
           <li>
               <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
           </li>
@@ -76,10 +72,69 @@
 <body class="eventbody">
 
   <div class="evebanner">
-    <img src="img/Events.png" alt="">
+    <img src="img/banner/Events.png" alt="">
   </div>
+  <br>
+  <h2 class="text-center">Join Our Hackathon and Change the World</h2>
+  <p class="text-secondary">
+      Think outside the box: Collaborate, Innovate, and Create
+  </p>
+    <section class="articles">
+        <article>
+            <div class="article-wrapper">
+                <figure>
+                    <img src="img/event/live-event.jpg" alt="" />
+                </figure>
+                <div class="article-body">
+                    <h2>Live Event</h2>
+                    <p>
+                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
+                        congue
+                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
+                        egestas.
+                    </p>
+                    <a class="btn btn-primary" href="live_event.html" role="button">Know More</a>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="article-wrapper">
+                <figure>
+                    <img width="368" height="207" src="img/event/upcoming-event.avif" alt="" />
+                </figure>
+                <div class="article-body">
+                    <h2>Upcoming Events</h2>
+                    <p>
+                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
+                        congue
+                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
+                        egestas.
+                    </p>
+                    <a class="btn btn-primary" href="upcoming_events.html" role="button">Know More</a>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="article-wrapper">
+                <figure>
+                    <img width="368" height="207" src="img/event/past-event.jpg" alt="" />
+                </figure>
+                <div class="article-body">
+                    <h2>Past Events</h2>
+                    <p>
+                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
+                        congue
+                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
+                        egestas.
+                    </p>
+                    <a class="btn btn-primary" href="past_events.html" role="button">Know More</a>
+                </div>
+            </div>
+        </article>
+    </section>
 
-      <div class="container">
+
+      <!-- <div class="container">
         <div class="card-container">
           <div class="row">
             <div class="card-deck">
@@ -125,7 +180,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 </body>
 
 
