--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </li>
             <li class="nav-item dropdown">
                 <div class="dropdown">
-                    <a href="events.html" class="nav-link">EVENTS</a>
+                    <a href="event.html" class="nav-link">EVENTS</a>
                     <div class="dropdown-content">
                         <a href="live_event.html">LIVE EVENTS</a>
                         <a href="upcoming_events.html">UPCOMMING EVENTS</a>
