Past Event Page

--- a/index.html
+++ b/index.html
@@ -157,10 +157,9 @@
                     <div class="article-body">
                         <h2>Live Event</h2>
                         <p>
-                            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                            congue
-                            bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                            egestas.
+                            This event typically involves brainstorming sessions, workshops, and presentations, 
+                            where participants are encouraged to think outside the box and come up with unique 
+                            solutions to the challenge at hand
                         </p>
                         <a class="btn btn-primary" href="live_event.html" role="button">Know More</a>
                     </div>
@@ -174,10 +173,9 @@
                     <div class="article-body">
                         <h2>Upcoming Events</h2>
                         <p>
-                            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                            congue
-                            bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                            egestas.
+                            These events often focus on specific themes or industries, such as technology, 
+                            healthcare, or sustainability, and are often organized by companies, universities, 
+                            or other organizations looking to stimulate innovation.
                         </p>
                         <a class="btn btn-primary" href="upcoming_events.html" role="button">Know More</a>
                     </div>
@@ -191,10 +189,9 @@
                     <div class="article-body">
                         <h2>Past Events</h2>
                         <p>
-                            Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                            congue
-                            bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                            egestas.
+                            They are also sometimes organized by universities or other educational institutions 
+                            as a way to give students experience working on real-world software projects to engage 
+                            with the tech community and innovation.
                         </p>
                         <a class="btn btn-primary" href="past_events.html" role="button">Know More</a>
                     </div>
