--- a/past_events.html
+++ b/past_events.html
@@ -82,78 +82,29 @@
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                         <div class="col-lg-6">
                             <div class="card ">
-                                <img src="img/Hackathon2.0.png" alt="">
+                                <img src="img/event/krishi-vikalp.jpg" alt="">
                                 <div class="card-body">
-                                    <p class="card-text">Event Name and Event Description in two three lines. <br>
-                                        DD/MM/YYYY | Venu : XYZ area <br> <a href="winners.html">Click Here </a>to view
-                                        the winners </p>
+                                    <p class="card-text"><strong>Event Name:- </strong>KRISHI-VIKALP<br>
+                                        <strong>Event Date:- </strong>25th Feb 2023 <br>
+                                        <strong>Event Venue:- </strong>Sri Sukhmani Institute of Management, Dwarka, New Delhi <br>
+                                        <a href="">Participants</a> <br>
+                                        <a href="">Winners</a>
+                                    </p>
+                                    <a class="btn btn-primary" href="contact.html" role="button">Know More</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="card shadow-sm">
-                                <img src="img/Hackathon3.png" alt="">
+                                <img src="img/event/samadhan.png" alt="">
                                 <div class="card-body">
-                                    <p class="card-text">Event Name and Event Description in two three lines. <br>
-                                        DD/MM/YYYY | Venu : XYZ area <br> <a href="winners.html">Click Here </a>to view
-                                        the winners </p>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="album py-5 bg-light">
-                <div class="container">
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                        <div class="col-lg-6">
-                            <div class="card ">
-                                <img src="img/Event3.png" alt="">
-                                <div class="card-body">
-                                    <p class="card-text">Event Name and Event Description in two three lines. <br>
-                                        DD/MM/YYYY | Venu : XYZ area <br> <a href="winners.html">Click Here </a>to view
-                                        the winners </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="card shadow-sm">
-                                <img src="img/agritech.png" alt="">
-                                <div class="card-body">
-                                    <p class="card-text">Event Name and Event Description in two three lines. <br>
-                                        DD/MM/YYYY | Venu : XYZ area <br> <a href="winners.html">Click Here </a>to view
-                                        the winners </p>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="album py-5 bg-light">
-                <div class="container">
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                        <div class="col-lg-6">
-                            <div class="card ">
-                                <img src="img/Event2.png" alt="">
-                                <div class="card-body">
-                                    <p class="card-text">Event Name and Event Description in two three lines. <br>
-                                        DD/MM/YYYY | Venu : XYZ area <br> <a href="winners.html">Click Here </a>to view
-                                        the winners </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="card shadow-sm">
-                                <img src="img/ideathon.jpg" alt="">
-                                <div class="card-body">
-                                    <p class="card-text">Event Name and Event Description in two three lines. <br>
-                                        DD/MM/YYYY | Venu : XYZ area <br> <a href="winners.html">Click Here </a>to view
-                                        the winners </p>
-
+                                    <p class="card-text"><strong>Event Name:- </strong>SAMADHAN<br>
+                                        <strong>Event Date:- </strong>17th and 18th Dec 2022 <br>
+                                        <strong>Event Venue:- </strong>Bipin Tripathi Kumaon Institute of Technology, Dwarahat, Uttarakhand <br>
+                                        <a href="">Participants</a> <br>
+                                        <a href="">Winners</a>
+                                    </p>
+                                    <a class="btn btn-primary" href="contact.html" role="button">Know More</a>
                                 </div>
                             </div>
                         </div>
