--- a/event.html
+++ b/event.html
@@ -88,11 +88,10 @@
                 <div class="article-body">
                     <h2>Live Event</h2>
                     <p>
-                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                        congue
-                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                        egestas.
-                    </p>
+                      This event typically involves brainstorming sessions, workshops, and presentations, 
+                      where participants are encouraged to think outside the box and come up with unique 
+                      solutions to the challenge at hand
+                  </p>
                     <a class="btn btn-primary" href="live_event.html" role="button">Know More</a>
                 </div>
             </div>
@@ -105,11 +104,10 @@
                 <div class="article-body">
                     <h2>Upcoming Events</h2>
                     <p>
-                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                        congue
-                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                        egestas.
-                    </p>
+                      These events often focus on specific themes or industries, such as technology, 
+                      healthcare, or sustainability, and are often organized by companies, universities, 
+                      or other organizations looking to stimulate innovation.
+                  </p>
                     <a class="btn btn-primary" href="upcoming_events.html" role="button">Know More</a>
                 </div>
             </div>
@@ -122,11 +120,10 @@
                 <div class="article-body">
                     <h2>Past Events</h2>
                     <p>
-                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet,
-                        congue
-                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet
-                        egestas.
-                    </p>
+                      They are also sometimes organized by universities or other educational institutions 
+                      as a way to give students experience working on real-world software projects to engage 
+                      with the tech community and innovation.
+                  </p>
                     <a class="btn btn-primary" href="past_events.html" role="button">Know More</a>
                 </div>
             </div>
