--- a/past_events.html
+++ b/past_events.html
@@ -87,8 +87,8 @@
                                     <p class="card-text"><strong>Event Name:- </strong>KRISHI-VIKALP<br>
                                         <strong>Event Date:- </strong>25th Feb 2023 <br>
                                         <strong>Event Venue:- </strong>Sri Sukhmani Institute of Management, Dwarka, New Delhi <br>
-                                        <a href="">Participants</a> <br>
-                                        <a href="">Winners</a>
+                                        <a href="#">Participants</a> <br>
+                                        <a href="#">Winners</a>
                                     </p>
                                     <a class="btn btn-primary" href="contact.html" role="button">Know More</a>
                                 </div>
@@ -101,8 +101,8 @@
                                     <p class="card-text"><strong>Event Name:- </strong>SAMADHAN<br>
                                         <strong>Event Date:- </strong>17th and 18th Dec 2022 <br>
                                         <strong>Event Venue:- </strong>Bipin Tripathi Kumaon Institute of Technology, Dwarahat, Uttarakhand <br>
-                                        <a href="">Participants</a> <br>
-                                        <a href="">Winners</a>
+                                        <a href="#">Participants</a> <br>
+                                        <a href="#">Winners</a>
                                     </p>
                                     <a class="btn btn-primary" href="contact.html" role="button">Know More</a>
                                 </div>
