--- a/training.html
+++ b/training.html
@@ -95,64 +95,50 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col-lg-4">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img src="img/courses/AI&ML.jpg" alt="">
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
+                                <h4>AI and Machine Learning</h4>
+                                <p>
+                                    AI and machine learning are rapidly developing fields that have the potential to 
+                                    revolutionize many industries and change the way we live and work. It involves the 
+                                    development of computer systems that can perform tasks that would normally require 
+                                    human intelligence. 
+                                </p>
+                                <a class="btn btn-primary" href="#" role="button">Buy Now</a>
+                                <a class="btn btn-primary" href="#" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img src="img/courses/FullStack.jpg" alt="">
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
+                                <h4>Full Stack Development</h4>
+                                <p>
+                                    Full stack development is a complex and rapidly evolving field that requires a 
+                                    broad range of skills and knowledge. However, it can also be a rewarding and 
+                                    lucrative career path for those who are passionate about web development and enjoy 
+                                    working on both the front-end and back-end of applications.
+                                </p>
+                                <a class="btn btn-primary" href="#" role="button">Buy Now</a>
+                                <a class="btn btn-primary" href="#" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img src="img/courses/Aws_Devops.png" alt="">
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary"
-                                            onclick="window.location.href='checkout.html'">Buy This Course</button>
-                                    </div>
-                                </div>
+                                <h4>AWS and Devops</h4>
+                                <p>
+                                    AWS and DevOps are closely related, as many DevOps practices rely on cloud 
+                                    infrastructure and services like those provided by AWS. AWS, 
+                                    DevOps teams can quickly and easily provision and configure infrastructure, 
+                                    deploy applications, and automate testing and deployment processes and 
+                                    deliver applications.
+                                </p>
+                                <a class="btn btn-primary" href="#" role="button">Buy Now</a>
+                                <a class="btn btn-primary" href="#" role="button">Know More</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +216,7 @@
             </div>
         </div>
 
-        <div class="album py-5 bg-light">
+        <!-- <div class="album py-5 bg-light">
             <div class="container"> 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col-lg-4">
@@ -298,7 +284,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </main>
 
